<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bangcode.myexperiments.fragment.BasicTextViewFragment">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/article_heading_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/article_title"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/holo_orange_light"
                android:textColorHighlight="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subheading_basic1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_heading_basic"
                android:padding="10dp"
                android:text="@string/article_subtitle1"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article_basic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subheading_basic1"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:text="@string/article_text1" />

            <TextView
                android:id="@+id/subheading_basic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_basic1"
                android:padding="10dp"
                android:text="@string/article_subtitle2"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article_basic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subheading_basic2"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:text="@string/article_text2" />
        </RelativeLayout>


    </ScrollView>


</RelativeLayout>
