<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bangcode.myexperiments.fragment.AsyncInternetFragment">


    <TextView
        android:id="@+id/instruction_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_async"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/book_input_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint_async"
        android:inputType="text" />

    <Button
        android:id="@+id/searchButtonAsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_async" />

    <TextView
        android:id="@+id/titleTextAsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/authorTextAsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

</LinearLayout>
