<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bangcode.myexperiments.fragment.ConstraintHelloToastFragment">
        
        <Button
            android:id="@+id/button_toast_constraint"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/button_label_toast"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/show_count_constraint"
        android:layout_width="0dp"
        android:layout_height="188dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:background="@color/mybackgroundcolor"
        android:gravity="center_horizontal"
        android:text="@string/count_initial_value"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/count_text_size"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/button_count_constraint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_count_constraint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_label_count"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/show_count_constraint" />




</android.support.constraint.ConstraintLayout>
